# free2pee

./: .gitignore  Cargo.toml  README.md  free2pee-fbfecb9ff5b972b7.js  free2pee-fbfecb9ff5b972b7_bg.wasm  index.html  styles.css  vibes.css
.github/workflows/: julia.yml  release.yml
Free2Pee/: Manifest.toml  Project.toml
Free2Pee/data/: chipotle.json  nearby.csv  nearbysearch.csv  our_table.json  overpass.json  place_details.json  poi.json  target_4817053508.xml
Free2Pee/data/cambridge_redline_places_json/: 99_Restaurants.json  9Zaab_Thai_Street_Food.json  Aceituna_Grill.json  Aleppo_Palace.json  Alewife_Bistro.json  Alex's_Kitchen_Somerville.json  Alfredos_Italian_Kitchen_-_Cambridge.json  Andy's_Diner.json  Anna's_Taqueria.json  Ariana_Restaurant.json  Arlington_Restaurant_&_Diner.json  Asmara.json  Ball_Square_Cafe.json  Base_Crave.json  Beantown_Taqueria.json  Beantown_Taqueria_Cafe.json  Big_Belly_Deli.json  Boca_Grande_Taqueria.json  Boloco_-_Boston_Common.json  Bon_Me.json  Bon_Me_Test_Kitchen.json  Bonchon_Cambridge_(Takeout_Only).json  Boston_Burger_Company_-_Davis_Square.json  Burger_King.json  Cafe_Barada.json  Cafe_Mami.json  Cafe_Podima.json  Cafe_Spice.json  Cambridge_Common_Restaurant.json  Cambridge_House_of_Pizza.json  Carolicious_Venezuelan_Food.json  Chalawan_Asian_Eatery.json  Charleys_Cheesesteaks.json  Chick-fil-A.json  Chipotle_Mexican_Grill.json  Chow_n_Joy.json  (+146 more)
Free2Pee/src/: Free2Pee.jl
Free2Pee/test/: api.jl  basic_overpass_query.jl  osm.jl  osm.py  overpass_api.jl  populate_bathrooms.jl  runtests.jl
src/: main.rs
(+27 files in other folders)
