[package]
name = "outcall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.6", features = ["csr"] }
async-trait = "0.1.68"
futures = "0.3.28"
js-sys = "0.3.64"
reqwasm = "0.5.0"
serde = "1.0.175"
serde_derive = "1.0.175"
serde_json = "1.0.103"
thiserror = "1.0.44"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "Geolocation",
    "console",
    "Window",
    "WindowClient",
    "Navigator",
    "NavigatorAutomationInformation",
    "Position",
    "PositionAlignSetting",
    "PositionError",
    "PositionOptions",
    "Coordinates",
    "DateTimeValue",
] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1.7"
leptos_router = { version = "0.4.6", features = ["csr"] }
serde-wasm-bindgen = "0.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
